--- a/welcome.yml
+++ b/welcome.yml
@@ -1,22 +1,23 @@
 msg: mama eammi chastunav
-server.port=8789
-
-spring.datasource.url=jdbc:mysql://localhost:3306/sbms
-spring.datasource.username=root
-spring.datasource.password=manager
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
-
-
-
-
-#smtp properties
-
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=bheemesh2jetty@gmail.com
-spring.mail.password=tenf hzag dtbc peze
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+server:
+  port: 8789
+spring:
+  datasource:
+    password: manager
+    url: jdbc:mysql://localhost:3306/sbms
+    username: root
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+  mail:
+    host: smtp.gmail.com
+    password: tenf hzag dtbc peze
+    port: 587
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+    username: bheemesh2jetty@gmail.com
