--- a/citizen-api.yml
+++ b/citizen-api.yml
@@ -8,3 +8,18 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
+#smtp properties
+
+
+  mail:
+    properties:
+      mail:
+        smtp:
+          starttls:
+            enable: 'true'
+          auth: 'true'
+    host: smtp.gmail.com
+    username: bheemesh2jetty@gmail.com
+    password: tenf hzag dtbc peze
+    port: '587'
+
