--- a/dc-api.yml
+++ b/dc-api.yml
@@ -1,1 +1,10 @@
-
+spring:
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    password: manager
+    url: jdbc:mysql://localhost:3306/his
+    username: root
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
