--- a/citizen-api.yml
+++ b/citizen-api.yml
@@ -20,6 +20,6 @@ spring:
           auth: 'true'
     host: smtp.gmail.com
     username: bheemesh2jetty@gmail.com
-    password: tenf hzag dtbc peze
+    password: twts mewd jfmw nigq
     port: '587'
 
